--- a/styles/sm.scss
+++ b/styles/sm.scss
@@ -42,6 +42,11 @@
     text-align: center;
   }
 
+  .lg-left-border {
+    border-left-style: solid;
+    border-left-width: 0px;
+  }
+
   .bg {
     left: -10%;
   }
