--- a/styles/lg.scss
+++ b/styles/lg.scss
@@ -21,7 +21,7 @@ $scroll_bar: 15px;
 $c_000_blue: rgb(125,214,246);
 $c_050_blue: rgb(27, 167, 236);
 $c_100_blue: rgb(30, 57, 152);
-$c_teal: rgb(75, 222, 222);
+$c_teal: rgb(88, 222, 222);
 $c_grey: rgb(215, 216, 214);
 $c_purple: rgb(121, 126, 246);
 $c_white: rgb(255, 255, 255);
@@ -94,6 +94,10 @@ VISUAL
   text-align: center;
 }
 
+.space-div {
+  margin: 1.5rem 0rem;
+}
+
 .align-left {
   text-align: left;
 }
@@ -143,10 +147,26 @@ VISUAL
 
 .line-down {
   height: 10rem;
+  
+  .cls-1 {
+    fill:none;
+    stroke-miterlimit:10;
+    stroke-width:0.1rem;
+    stroke:url(#linear-gradient);
+    stroke-dasharray: 167;
+    stroke-dashoffset: 167;
+    animation: animate-line-down 3s linear infinite;
+  }
 }
 
+@keyframes animate-line-down { 
+  from {stroke-dashoffset: 167;}
+  to {stroke-dashoffset: 0;}
+}
+
+
 /* Section Classes */
-.part-one-gradient {
+.gradient-bg-1 {
   background-image: linear-gradient(
     $c_100_blue,
     $c_grey 25%,
@@ -156,7 +176,7 @@ VISUAL
   );
 }
 
-.part-two-gradient {
+.gradient-bg-2 {
   background-image: linear-gradient(
     $c_purple,
     rgba(125,214,246, 0.5),
@@ -196,32 +216,47 @@ VISUAL
   .gdp-h2 {font-size: 0.35rem;font-weight: 600;}
   .gdp-h4 {font-size: 0.12rem;font-weight: 500;}
   .gdp-p {font-size: 0.12rem;}
+  .desktop {display: block;}
+  .mobile {display: none; text-anchor: middle;}
   .gdp-circle {
     fill:none;
     stroke-miterlimit:10;
     stroke-width:0.02rem;
     stroke:url(#part-two-gradient);
-    stroke-dasharray: 100;
-    stroke-dashoffset: 100;
-    animation: animate-gdp-circle 5s linear forwards;
+    stroke-dasharray: 70;
+    stroke-dashoffset: 70;
+    animation: animate-gdp-circle 2.5s linear forwards;
+  }
+  .gdp-circle-m {
+    fill:none;
+    stroke-miterlimit:10;
+    stroke-width:0.02rem;
+    stroke:url(#part-two-gradient-m);
+    stroke-dasharray: 70;
+    stroke-dashoffset: 70;
+    animation: animate-gdp-circle 2.5s linear forwards;
   }
   .gdp-line {
     fill:none;
     stroke-miterlimit:10;
     stroke-width:0.02rem;
     stroke:url(#part-two-gradient-2);
-    stroke-dasharray: 100;
-    stroke-dashoffset: 100;
-    animation: animate-gdp-line 5s linear forwards;
-    animation-delay: 5s;
+    stroke-dasharray: 86.5;
+    stroke-dashoffset: 86.5;
+    animation: animate-gdp-line 2.5s linear forwards 2.5s;
+  }
+  .gdp-dot {
+    opacity: 0; visibility: hidden; 
+    animation: animate-gdp-dot 1s linear forwards 5s;
   }
   @keyframes animate-gdp-circle { 
-    from {stroke-dashoffset: 100;}
-    to {stroke-dashoffset: 200;}
+    to {stroke-dashoffset: 140;}
   }
   @keyframes animate-gdp-line { 
-    from {stroke-dashoffset: 100;}
     to {stroke-dashoffset: 0;}
+  }
+  @keyframes animate-gdp-dot {
+    to {opacity: 1; visibility: visible;}
   }
 }
   
@@ -235,7 +270,7 @@ VISUAL
     z-index: -1;
   }
 
-  text{fill: $c_white;}
+  text{fill: $c_white; text-anchor: middle;}
   .cls-1{isolation:isolate;}
   .cls-2{opacity:0.4;mix-blend-mode:multiply;}
   .cls-3{fill:url(#part-three-gradient);}
@@ -244,15 +279,17 @@ VISUAL
 
   .slick-slide.slick-active.slick-center{
     transition: transform 0.5s ease-out;
-    transform: scale(1.25);
+    transform: scale(1.5);
   }
-  .slick-slide{
+  .slick-slide.slick-active{
     transition: transform 0.5s ease-out;
     transform: scale(1);
   }
-  // .slick-slide{
-  //   transform: scale(0);
-  // }
+  .slick-slide{
+    transition: transform 0.5s ease-out;
+    transform: scale(0);
+    padding: 3rem 0rem;
+  }
 }
 
 .part-four {
@@ -264,6 +301,19 @@ VISUAL
   .west-number{font-size: 40px;}
   .asia-name{font-size: 10px;}
   .asia-number{font-size: 21px;}
+  .is-hidden {opacity: 0; visibility: hidden; transform: translateY(-50%);}
+  .dot {animation: bubble-animate 1s ease forwards;}
+  .usa {animation: bubble-animate 1s ease forwards 0.5s;}
+  .deu {animation: bubble-animate 1s ease forwards 1.0s;}
+  .chn {animation: bubble-animate 1s ease forwards 1.5s;}
+  .sea {animation: bubble-animate 1s ease forwards 2.0s;}
+  @keyframes bubble-animate {
+    to {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0);
+    }
+  }
 }
 
 .part-five {
@@ -284,15 +334,30 @@ VISUAL
   .cls-4{stroke:url(#part-five-gradient-4);}
   .blue-fill{fill:#1e2f98;}
   .white-fill{fill:#f2f2f2;}
+  .percentage {text-anchor: end;}
+  .is-hidden {opacity: 0; visibility: hidden; transform: translateY(50%);}
+  .dot {animation: fade 1s ease forwards;}
+  .bar {animation: fade 1s ease forwards 0.5s;}
+  .lin {animation: fade 1s ease forwards 1.0s;}
+  .num {animation: fade 1s ease forwards 1.5s;}
+  @keyframes fade {
+    to {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(0);
+    }
+  }
 }
 
 .section-two {
+  position: relative;
   color: $c_white;
 
   .s2-bg {
     mask-image: linear-gradient(
-      rgba(0,0,0,0.1),
-      rgba(0,0,0,1),
+      rgba(0,0,0,0.0),
+      rgba(0,0,0,1) 10%,
+      rgba(0,0,0,1) 90%,
       rgba(0,0,0,0.0)
     );
   }
@@ -301,7 +366,7 @@ VISUAL
 .section-three {
   color: $c_100_blue;
 
-  text {fill: $c_100_blue;}
+  text {fill: $c_100_blue; text-anchor: middle;}
   .svg {width: 75%;}
   .cls-1{isolation:isolate;}
   .cls-2{opacity:0.3;mix-blend-mode:multiply;}
@@ -309,9 +374,23 @@ VISUAL
   .challenges-h {font-size: 1.5rem;}
   .challenges-p {font-size: 0.75rem;}
   .challenges-b {font-size: 0.75rem;}
+  .highlight {
+    transition: all 0.5s ease-in-out;
+    fill: rgba(255, 255, 255, 0.2);
+    &.selected {
+      transition: all 0.5s ease-in-out;
+      fill: rgba(86, 222, 222, 0.75)
+    }
+  }
+  .description {animation: fadeIn ease-in-out 1s}
+  @keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+  }
 }
 
 .section-four {
+  position: relative;
   color: $c_100_blue;
 
   .s4-bgl {
@@ -338,7 +417,11 @@ VISUAL
   }
 
   text {fill: $c_100_blue;}
-  .svg{width: 100%;}
+  .svg{
+    width: 100%;
+  }
+  .desktop {display: block;}
+  .mobile {display: none;}
   .cls-1{isolation:isolate;}
   .cls-2{opacity:0.3;mix-blend-mode:multiply;}
   .cls-3,.cls-4,.cls-5,.cls-6,.cls-7{fill:none;stroke-miterlimit:10;stroke-width:3px;}
@@ -347,8 +430,15 @@ VISUAL
   .cls-5{stroke:url(#section-four-gradient-3);}
   .cls-6{stroke:url(#section-four-gradient-4);}
   .cls-7{stroke:url(#section-four-gradient-5);}
-  .solutions-h {font-size: 1.5rem;}
+  .cls-8,.cls-9,.cls-10,.cls-11,.cls-12{fill:none;stroke-miterlimit:10;stroke-width:3px;}
+  .cls-8{stroke:url(#section-four-gradient-m);}
+  .cls-9{stroke:url(#section-four-gradient-m-2);}
+  .cls-10{stroke:url(#section-four-gradient-m-3);}
+  .cls-11{stroke:url(#section-four-gradient-m-4);}
+  .cls-12{stroke:url(#section-four-gradient-m-5);}
+  .solutions-h {font-size: 1.5rem; text-anchor: middle;}
   .solutions-p {font-size: 0.75rem;}
+  .right {text-anchor: end;}
 }
 
 .section-five {
@@ -362,7 +452,8 @@ VISUAL
 	padding-bottom:56.25%;
 	padding-top:30px;
   height:0;
-	overflow:hidden;
+  overflow:hidden;
+  background-color: $c_black;
 }
 
 .video-container iframe, .video-container object, .video-container embed {
