- Update as of 11.12.20

--- a/pages/sections/styles/SectionFive.module.scss
+++ b/pages/sections/styles/SectionFive.module.scss
@@ -1,9 +1,5 @@
 @import "../../../styles/utils.scss";
 
 .section-five {
-  color: $c_white;
-  img {
-    @include desktop { width: 200px; }
-    @include mobile { width: 100px; }
-  }
+  color: $c_dark_blue;
 }
