--- a/pages/components/styles/LineDown.module.scss
+++ b/pages/components/styles/LineDown.module.scss
@@ -1,26 +1,26 @@
 @import "../../../styles/utils.scss";
 
 .line-svg {
-  @include desktop { height: 10rem; }
+  @include desktop { height: 7.5rem; }
   @include mobile { height: 5rem; }
 }
 .line {
   fill:none;
   stroke-miterlimit:10;
   stroke-width:3px;
-  stroke:url(#line-down-gradient);
+  stroke:$c_teal;
   stroke-dasharray: 167;
   stroke-dashoffset: 167;
-  animation: draw-line 2s linear forwards 1s;
+  animation: draw-line 2s linear forwards;
 }
 .line-delay {
   fill:none;
   stroke-miterlimit:10;
-  stroke-width:2px;
+  stroke-width:3px;
   stroke:url(#line-down-gradient);
   stroke-dasharray: 167;
   stroke-dashoffset: 167;
-  animation: draw-line 2s linear forwards 7s;
+  animation: draw-line 2s linear forwards 6s;
 }
 @keyframes draw-line { 
   from {stroke-dashoffset: 167;}
