--- a/pages/sections/styles/SectionFour.module.scss
+++ b/pages/sections/styles/SectionFour.module.scss
@@ -18,19 +18,33 @@
   @include desktop { right: -100%; }
   @include mobile { right: -50%; }
 }
-.left-border {
-  border-left-style: solid;
-  @include desktop { border-left-width: 3px; }
-  @include mobile { border-left-width: 0px; }
-}
 .hidden {opacity: 0; visibility: hidden;}
 .seq1-bg {animation: fade-in 2s forwards, blend-in 2s forwards 2s;}
 .seq2-h {animation: fade-in 1s forwards 4s}
 .seq3-p {animation: fade-in 1s forwards 5s}
 .seq4-video {animation: fade-in 1s forwards 6s}
-.quote { 
-  margin: 0rem 0rem !important; 
+.quote-open { 
   color: $c_purple;
+  @include desktop { font-size: 10rem; }
+  @include mobile { font-size: 6.66rem; }
+  font-weight: 700;
+}
+.quote-description {
+  color: $c_purple;
+  @include desktop { font-size: 1.5rem; margin-top: -5rem; }
+  @include mobile { font-size: 1rem; margin-top: -3rem; }
+  font-style: italic;
+}
+.quote-line {
+  @include desktop { width: 200px; }
+  @include mobile { width: 150px; }
+  margin: 1rem auto;
+  border-top: 1px solid $c_purple;
+}
+.quote-by {
+  color: $c_purple;
+  @include desktop { font-size: 1rem; }
+  @include mobile { font-size: 0.75rem; }
 }
 .bg {
   bottom: 10%;
@@ -42,10 +56,5 @@
   @include desktop { left: -55%;}
   @include mobile { left: -15% }
 }
-@keyframes blend-in {
-  from {opacity: 1;}
-  to {opacity: 0.75;}
-}
-@keyframes fade-in {
-  to {opacity: 1; visibility: visible;}
-}
+@keyframes fade-in {to {opacity: 1; visibility: visible;}}
+@keyframes blend-in {from {opacity: 1;}to {opacity: 0.75;}}
