--- a/pages/sections/styles/SectionOnePartFive.module.scss
+++ b/pages/sections/styles/SectionOnePartFive.module.scss
@@ -10,13 +10,7 @@
 .hidden {opacity: 0; visibility: hidden;}
 .seq1-bg {animation: fade-in 2s forwards, blend-in 2s forwards 2s;}
 .seq2-p {animation: fade-in 1s forwards 4s}
-.seq3-h {animation: fade-in 1s forwards 5s}
-.seq4-line {animation: fade-in 1s forwards 6s}
-.seq5-p {animation: fade-in 1s forwards 8s}
-@keyframes blend-in {
-  from {opacity: 1;}
-  to {opacity: 0.1;}
-}
-@keyframes fade-in {
-  to {opacity: 1; visibility: visible;}
-}
+.seq3-line {animation: fade-in 1s forwards 5s}
+.seq4-p {animation: fade-in 1s forwards 7s}
+@keyframes fade-in {to {opacity: 1; visibility: visible;}}
+@keyframes blend-in {from {opacity: 1;}to {opacity: 0.1;}}
