--- a/styles/global.scss
+++ b/styles/global.scss
@@ -4,94 +4,80 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-family: (
+    Helvetica, Arial, "Lucida Grande", sans-serif
+  ); 
   min-height: 100vh;
   overflow-x: hidden;
 }
-
 a {
   color: inherit;
   text-decoration: none;
 }
-
 * {
   box-sizing: border-box;
 }
-
 .desktop {
-  @include desktop { display: block; }
-  @include mobile { display: none; }
+  @include desktop { display: block }
+  @include mobile { display: none }
 }
 .mobile {
-  @include desktop { display: none; }
-  @include mobile { display: block; }
+  @include desktop { display: none }
+  @include mobile { display: block }
 }
-
 .main {
   nav {
     padding: 50px 50px;
   }
-  
   h1 {
-    font-weight: 300;
-    letter-spacing: 0.1rem;
-    @include desktop { font-size: 4rem; }
+    font-weight: 700;
+    @include desktop { font-size: 3rem; }
     @include mobile { font-size: 2rem; }
   }
-  
   h2 {
-    font-weight: 500;
-    letter-spacing: 0.1rem;
-    @include desktop { font-size: 3rem; }
-    @include mobile { font-size: 1.5rem; }
+    font-weight: 300;
+    text-decoration: underline;
+    @include desktop { font-size: 1.5rem; }
+    @include mobile { font-size: 1rem; }
   }
-  
+  h3 {
+    font-weight: 700;
+    @include desktop { font-size: 2rem; }
+    @include mobile { font-size: 1.33rem; }
+  }
   h4 {
-    font-weight: 500;
-    letter-spacing: 0.1rem;
+    @include desktop { font-size: 1.5rem; }
+    @include mobile { font-size: 1rem; }
+  }
+  h5 {
+    @include desktop { font-size: 0.75rem; }
+    @include mobile { font-size: 0.5rem; }
+  }
+  h6 {
     @include desktop { font-size: 1rem; }
     @include mobile { font-size: 0.75rem; }
   }
-  
   p {
-    font-size: 1rem;
-    margin: 3rem 1rem;
-    @include mobile { font-size: 0.75rem; }
-  }
-
-  .emphasis {
-    font-size: 2rem;
-    font-weight: 700;
-    @include mobile { font-size: 1rem; }
-  }
-  
-  .point {
-    font-size: 2rem;
-    font-weight: 500;
-    @include mobile { font-size: 1rem; }
-  }
-
-  .purple {
-    color: rgb(121, 126, 246);
+    @include desktop { font-size: 1rem; margin: 3rem 1rem; }
+    @include mobile { font-size: 0.75rem; margin: 1rem 1rem; }
   }
 }
 
 /* Common Classes */
 .section {
   @include desktop { padding: 10rem 0rem; }
-  @include mobile { padding: 3rem 0rem; }
+  @include mobile { padding: 2.5rem 0rem; }
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
 }
 .space-div {
-  @include desktop { margin: 3rem 0rem; }
+  @include desktop { margin: 2rem 0rem; }
   @include mobile { margin: 1rem 0rem; }
 }
 .align-left {
-  @include desktop { text-align: left; }
-  @include mobile { text-align: center; }
+  text-align: left; 
 }
 .bg {
   position: absolute;
@@ -101,14 +87,15 @@ a {
   opacity: 0.1;
   @include mobile { left: -10%; }
 }
-
 /* Section Classes */
 .gradient-bg-1 {
   background-image: linear-gradient(
     rgb(30, 57, 152),
     rgb(215, 216, 214) 25%,
+    rgb(215, 216, 214) 40%,
     rgba(121, 126, 246, 0.5),
-    rgb(215, 216, 214) 55%,
+    rgb(215, 216, 214) 60%,
+    rgb(215, 216, 214) 70%,
     rgb(30, 57, 152)
   );
 }
@@ -121,11 +108,10 @@ a {
     rgb(121, 126, 246)
   );
 }
-
 .slick-slide.slick-active.slick-center{
   transition: transform 0.5s ease-out;
   @include desktop {transform: scale(1.5);}
-  @include mobile {transform: scale(0.75)}
+  @include mobile {transform: scale(1)}
 }
 .slick-slide.slick-active{
   transition: transform 0.5s ease-out;
@@ -134,10 +120,17 @@ a {
 .slick-slide{
   transition: transform 0.5s ease-out;
   transform: scale(0);
-  @include desktop {padding: 3rem 0rem;}
+  @include desktop {padding: 5rem 0rem;}
   @include mobile {padding: 0rem 0rem;}
 }
-
+.rc-slider-mark-text {
+  @include desktop { width: 120px; font-size: 1rem; }
+  @include mobile { width: 100px; font-size: 0.75rem; }
+  color: $c_medium_blue;
+  &.rc-slider-mark-text-active {
+    color: $c_dark_blue;
+  }
+}
 .video-container {
   position:relative;
 	padding-bottom:56.25%;
@@ -146,7 +139,6 @@ a {
   overflow:hidden;
   background-color: $c_black;
 }
-
 .video-container iframe, .video-container object, .video-container embed {
 	position:absolute;
 	top:0;
