--- a/pages/sections/styles/SectionTwo.module.scss
+++ b/pages/sections/styles/SectionTwo.module.scss
@@ -4,6 +4,12 @@
   position: relative;
   color: $c_white;
 }
+.underline {
+  @include desktop { width: 235px; }
+  @include mobile { width: 110px; }
+  margin: 0rem auto 0.5rem;
+  border-top: 1px solid $c_white;
+}
 .bg {
   mask-image: linear-gradient(
     rgba(0,0,0,0.0),
@@ -11,13 +17,16 @@
     rgba(0,0,0,1) 90%,
     rgba(0,0,0,0.0)
   );
-  @include desktop { left: -55%;}
-  @include mobile { left: -15% }
+  @include mobile { bottom: 25% }
+}
+@mixin padding {
+  @include desktop { margin: 4rem 0; }
+  @include mobile { margin: 2rem 0; }
 }
 .hidden {opacity: 0; visibility: hidden;}
-.seq1-bg {animation: fade-in 2s forwards, blend-in 2s forwards 2s;}
-.seq2-video {animation: fade-in 1s forwards 4s;}
-.seq3-h {animation: fade-in 1s forwards 5s;}
-.seq4-sbs {animation: fade-in 1s forwards 6s}
+.seq1-bg {animation: fade-in 2s forwards, blend-in 1s forwards 2s;}
+.seq2-video {animation: fade-in 1s forwards 3s;}
+.seq3-h {animation: fade-in 1s forwards 4s; @include padding; }
+.seq4-sbs {animation: fade-in 1s forwards 5s; @include padding; }
 @keyframes fade-in {to {opacity: 1; visibility: visible;}}
 @keyframes blend-in {from {opacity: 1;}to {opacity: 0.1;}}
