--- a/pages/components/styles/LineDown.module.scss
+++ b/pages/components/styles/LineDown.module.scss
@@ -4,11 +4,20 @@
   @include desktop { height: 7.5rem; }
   @include mobile { height: 5rem; }
 }
-.line {
+.line-teal {
   fill:none;
   stroke-miterlimit:10;
   stroke-width:3px;
   stroke:$c_teal;
+  stroke-dasharray: 167;
+  stroke-dashoffset: 167;
+  animation: draw-line 2s linear forwards;
+}
+.line-blue {
+  fill:none;
+  stroke-miterlimit:10;
+  stroke-width:3px;
+  stroke:$c_medium_blue;
   stroke-dasharray: 167;
   stroke-dashoffset: 167;
   animation: draw-line 2s linear forwards;
@@ -20,7 +29,7 @@
   stroke:url(#line-down-gradient);
   stroke-dasharray: 167;
   stroke-dashoffset: 167;
-  animation: draw-line 2s linear forwards 6s;
+  animation: draw-line 2s linear forwards 4s;
 }
 @keyframes draw-line { 
   from {stroke-dashoffset: 167;}
