--- a/pages/sections/styles/SectionOnePartOne.module.scss
+++ b/pages/sections/styles/SectionOnePartOne.module.scss
@@ -3,11 +3,17 @@
 .part-one {
   padding: 0rem 0rem;
   height: 100vh;
-  color: rgb(242, 242, 242);
+  color: $c_white;
   background-image: url(../../../public/img/s1-p1-bg.svg);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100%;
+  background-size: 75%;
+}
+.underline {
+  @include desktop { width: 470px; }
+  @include mobile { width: 235px; }
+  margin: 0rem auto 0.5rem;
+  border-top: 1px solid $c_white;
 }
 .light-title {
   @include desktop { font-size: 3rem; }
