--- a/pages/sections/styles/SectionFour.module.scss
+++ b/pages/sections/styles/SectionFour.module.scss
@@ -22,11 +22,6 @@
   top: 5%;
   right: -75%;
 }
-.hidden {opacity: 0; visibility: hidden;}
-.seq1-bg {animation: fade-in 2s forwards, blend-in 1s forwards 2s;}
-.seq2-h {animation: fade-in 1s forwards 3s}
-.seq3-p {animation: fade-in 1s forwards 4s; margin: 3rem 0;}
-.seq4-video {animation: fade-in 1s forwards 5s}
 .quote-open { 
   color: $c_purple;
   @include desktop { font-size: 10rem; }
@@ -37,7 +32,6 @@
   color: $c_purple;
   @include desktop { font-size: 1.5rem; margin-top: -5rem; }
   @include mobile { font-size: 1rem; margin-top: -3rem; }
-  font-style: italic;
 }
 .quote-line {
   @include desktop { width: 200px; }
@@ -45,10 +39,18 @@
   margin: 1rem auto;
   border-top: 1px solid $c_purple;
 }
+.quote-pic {
+  @include desktop { height: 96px; }
+  @include mobile { height: 72px; }
+}
 .quote-by {
   color: $c_purple;
   @include desktop { font-size: 1rem; }
   @include mobile { font-size: 0.75rem; }
+}
+.float {
+  position: relative;
+  z-index: 1;
 }
 .bg {
   mask-image: linear-gradient(
@@ -58,5 +60,3 @@
   );
   @include mobile { bottom: 22.5% }
 }
-@keyframes fade-in {to {opacity: 1; visibility: visible;}}
-@keyframes blend-in {from {opacity: 1;}to {opacity: 0.75;}}
