--- a/pages/sections/styles/SectionOnePartFive.module.scss
+++ b/pages/sections/styles/SectionOnePartFive.module.scss
@@ -2,6 +2,8 @@
 
 .part-five {
   color: rgb(242, 242, 242);
+  @include desktop { padding-top: 4rem; }
+  @include mobile { padding-top: 2rem; }
 }
 .underline {
   @include desktop { width: 375px; }
@@ -9,16 +11,24 @@
   margin: 0 auto 0.5rem;
   border-top: 1px solid $c_white;
 }
+.svg {
+  position: relative;
+  z-index: 1;
+}
 .bg {
   mask-image: linear-gradient(
     rgba(0,0,0,0),
     rgba(0,0,0,1)
   );
 }
+@mixin padding {
+  @include desktop { margin: 4rem 0; }
+  @include mobile { margin: 2rem 0; }
+}
 .hidden {opacity: 0; visibility: hidden;}
 .seq1-bg {animation: fade-in 2s forwards, blend-in 1s forwards 2s;}
-.seq2-p {animation: fade-in 1s forwards 3s}
-.seq3-line {animation: fade-in 1s forwards 4s; margin: 3rem 0;}
-.seq4-p {animation: fade-in 1s forwards 5s}
+.seq2-p {animation: fade-in 1s forwards 3s;}
+.seq3-line {animation: fade-in 1s forwards 4s; @include padding;}
+.seq4-p {animation: fade-in 1s forwards 5s;}
 @keyframes fade-in {to {opacity: 1; visibility: visible;}}
 @keyframes blend-in {from {opacity: 1;}to {opacity: 0.1;}}
