--- a/styles/global.scss
+++ b/styles/global.scss
@@ -9,6 +9,11 @@ body {
   ); 
   min-height: 100vh;
   overflow-x: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+body::-webkit-scrollbar{
+  display: none;
 }
 a {
   color: inherit;
@@ -16,14 +21,6 @@ a {
 }
 * {
   box-sizing: border-box;
-}
-.desktop {
-  @include desktop { display: block }
-  @include mobile { display: none }
-}
-.mobile {
-  @include desktop { display: none }
-  @include mobile { display: block }
 }
 .main {
   nav {
@@ -147,9 +144,10 @@ a {
   @include mobile {padding: 0rem 0rem;}
 }
 .rc-slider-mark-text {
-  @include desktop { width: 120px; font-size: 1rem; }
-  @include mobile { width: 100px; font-size: 0.75rem; }
+  @include desktop { width: 120px; font-size: 1rem; top: -80px; }
+  @include mobile { width: 80px; font-size: 0.75rem; top: -70px ;}
   color: $c_medium_blue;
+  
   &.rc-slider-mark-text-active {
     color: $c_dark_blue;
   }
