--- a/pages/components/styles/IndustryChallenges.module.scss
+++ b/pages/components/styles/IndustryChallenges.module.scss
@@ -2,13 +2,13 @@
 
 .svg {
   @include desktop { height: 20rem; }
-  @include mobile { height: 10rem; }
-  margin: 3rem 0rem;
+  @include mobile { height: 8em; }
+  margin: 3rem auto;
   animation: fade-in 1s ease-out forwards;
 }
 .description {
   height: 150px;
-  margin: 5rem 0rem;
+  margin: 5rem auto;
   animation: fade-in 1s ease-out forwards;
 }
 @keyframes fade-in {
