--- a/pages/components/styles/IndustryChallenges.module.scss
+++ b/pages/components/styles/IndustryChallenges.module.scss
@@ -11,6 +11,11 @@
   margin: 5rem auto;
   animation: fade-in 1s ease-out forwards;
 }
+.slider {
+  display: flex;
+  justify-content: center;
+  white-space: pre;
+}
 @keyframes fade-in {
   from { opacity: 0; visibility: hidden; }
   to { opacity: 1; visibility: visible; }
